# mailer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
mailer/: __main__.py  cli.py  core.py  exceptions.py  models.py  utils.py
tests/: test_mailer.py
